Improve handling of/reasoning with generics (#49)